[package]
name = "rustre-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustre-parser = { path = "../rustre-parser" }
yeter = { git = "https://github.com/elegaanz/yeter", rev = "2ce2656d6523106964da31d9831c93778e38a0de" }