[package]
name = "rustre-parser"
description = "Lustre v6 parser"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/elegaanz/rustre"

[features]
tests-lustre-upstream = []

[dependencies]
enum-ordinalize = "3.1"
logos = "0.12.1"
nom = "7.1.3"
rowan = "0.15.11"
rowan-nom = "0.1.0"
thiserror = "1.0"

[dev-dependencies]
# Unfortunately, dev-dependencies cannot be optional
rustre-parser-tests-codegen = { path = "../rustre-parser-tests-codegen" }

[build-dependencies]
ungrammar = "1.16"
case = "1.0.0"
